// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildWriteMemoryPrompt > renders phase with steps, humanNotes a git context 1`] = `
"You are part of a tool that helps the user build a project incrementally.
A **memory write after a finished phase** is in progress — DO NOT implement anything,
do not refactor anything. Your only output is the file \`.mini/memory/phase-7-2026-05-24T14-30-00Z.md\`.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Finished phase
**Phase 7: Záznam paměti**
Goal: po fázi se zapíše memory soubor

Steps:
- [done] prompt builder
- [done] symlink

User's note:
"""
Symlink se na Windows fallbackuje na copyFile.
"""

# Your task
Write a brief summary of what was done in this phase and why. The target reader
is **you yourself** in later phases — \`git log\` tells you *what* changed, the memory
file should add *why* (decisions, trade-offs, loose ends).

## How to proceed
- Run \`git show HEAD\` via Bash and look at the diff of the last commit — that is the work of this phase.
- Read \`.mini/discuss/phase-7.md\` — the phase's intent from the discussion before planning.
- Read \`.mini/run/phase-7.md\` — the report from the auto session (what went well, what Claude ran into).
- Stick to facts. Don't write what you're not sure about.
- Short bullets, no long prose.

## Output format
Create the file \`.mini/memory/phase-7-2026-05-24T14-30-00Z.md\` via \`Write\` with this structure (section names
are fixed; you may leave a section empty if there is nothing to write):

\`\`\`
# Phase 7 — Záznam paměti

## What was done
(bullets: concrete changes — new modules, edited files, new tests)

## Key decisions
(bullets: why X instead of Y, what trade-offs were made, what was considered and rejected)

## Loose ends
(bullets: what was left unfinished, what to watch out for in later phases, technical debt)
\`\`\`

# You may use
\`Read\` to read project files, \`Bash\` for \`git show HEAD\`, and \`Write\` to create
\`.mini/memory/phase-7-2026-05-24T14-30-00Z.md\`. You don't need any other tools.
"
`;

exports[`buildWriteMemoryPrompt > vyjadřuje, ať Claude nepouští git show, když auto-commit neproběhl 1`] = `
"You are part of a tool that helps the user build a project incrementally.
A **memory write after a finished phase** is in progress — DO NOT implement anything,
do not refactor anything. Your only output is the file \`.mini/memory/phase-7-2026-05-24T14-30-00Z.md\`.

# Project
# Můj projekt
Stavím nástroj X pro Y.

# Finished phase
**Phase 2: Bez gitu**
Goal: něco se udělalo bez commitu

# Your task
Write a brief summary of what was done in this phase and why. The target reader
is **you yourself** in later phases — \`git log\` tells you *what* changed, the memory
file should add *why* (decisions, trade-offs, loose ends).

## How to proceed
- **Do not run** \`git show HEAD\` — either this phase created no commit, or you are not in a git repo. Rely only on the information below.
- Stick to facts. Don't write what you're not sure about.
- Short bullets, no long prose.

## Output format
Create the file \`.mini/memory/phase-7-2026-05-24T14-30-00Z.md\` via \`Write\` with this structure (section names
are fixed; you may leave a section empty if there is nothing to write):

\`\`\`
# Phase 2 — Bez gitu

## What was done
(bullets: concrete changes — new modules, edited files, new tests)

## Key decisions
(bullets: why X instead of Y, what trade-offs were made, what was considered and rejected)

## Loose ends
(bullets: what was left unfinished, what to watch out for in later phases, technical debt)
\`\`\`

# You may use
\`Read\` to read project files, and \`Write\` to create
\`.mini/memory/phase-7-2026-05-24T14-30-00Z.md\`. You don't need any other tools.
"
`;
